add ratrak sprite image placeholder

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,9 @@ import "../styles/global.css";
 
     <!-- RATRAK BUTTON -->
 <button id="ratrakBtn" class="ratrak-btn" aria-label="Open Ratrak menu">
-  <div class="ratrak-sprite">⬛</div>
+  <div class="ratrak-sprite">
+	<img src="/ratrak/ratrak1.png" width="48" height="48" alt="" />
+	</div>
 </button>
 
 <!-- BACKDROP -->
